--- a/DOCKER_COMPOSER/docker-compose.yml
+++ b/DOCKER_COMPOSER/docker-compose.yml
@@ -1,24 +1,39 @@
 version: '3.8'
 
 services:
-  cliente-service:
-    build: ./cliente-service
+  clienteservice:
+    image: gabrieldataengineer/clienteservice:latest
     ports:
       - "8081:8080"
+    dns:
+      - 8.8.8.8
     networks:
       - app-network
 
-  # pedido-service:
-  #   build: ./pedido-service
-  #   ports:
-  #     - "8082:8080"
-  #   networks:
-  #     - app-network
-
-  gateway:
-    build: ./gateway
+  estoqueservice:
+    image: gabrieldataengineer/estoqueservice:latest
     ports:
-      - "8080:8080"
+      - "8082:8080"
+    dns:
+      - 8.8.8.8
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - clienteservice
+    networks:
+      - app-network
+
+  pedidoservice:
+    image: gabrieldataengineer/pedidoservice:latest
+    ports:
+      - "8083:8080"
+    dns:
+      - 8.8.8.8
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    depends_on:
+      - clienteservice
+      - estoqueservice
     networks:
       - app-network
 
